meta des y kw add

--- a/pages/info.html
+++ b/pages/info.html
@@ -6,6 +6,8 @@
     <title>Brainrot | Info</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../images/mateoo.webp">
+    <meta name="description" content="pequeño desarrollador web, crecimiento personal, informacion de los brainrots">
+    <meta name="keywords" content="tiktok, acerca de mi, información, gratis, pequeño creador">
   </head>
   <body>
 
