--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -6,6 +6,8 @@
     <title>Brainrot</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../images/mateoo.webp">
+    <meta name="description" content="descripción breve de los brainrots, información de los brainrots">
+    <meta name="keywords" content="lirili larila, sahur, tung tung, tralalero tralala, mateo, mateooo, brainrot, IA">
   </head>
  <body>
 
