--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Brainrot</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./images/mateoo.webp">
+    <meta name="description" content="Bienvenido a mi sitio web sobre brainrots">
+    <meta name="keywords" content="brainrots, tralalero tralala, lirili larila, tung tung sahur, mateo, tatata sahur">
   </head>
   <body>
 
