ajustes de home

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     
 <main>
 
-     <div class="contenido">
-    <div class="texto">
+    
+    <div class="texto-info">
       <h1>¿Para qué es ésta página?</h1>
       <p>
         En ésta página estaremos hablando de cada uno de los brainrots,
