ajustes de home

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
 <main>
 
-    
+    <div class="contenedor">
     <div class="texto-info">
       <h1>¿Para qué es ésta página?</h1>
       <p>
