ajustes finales en home

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 </header>
     
 <main>
-
-  
+  <div class="contenido-info">
     <div class="texto-info">
       <h1>¿Para qué es ésta página?</h1>
       <p>
@@ -41,9 +40,9 @@
     <div class="imagen-derecha">
       <img src="./images/sahur.jpg" alt="Brainrots">
     </div>
-
-
+  </div>
 </main>
+
 
 <footer>
       <p>© 2025, Isaias Quiroz. Todos los derechos reservados. </p> 
