ajustes en home 2

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       <img src="./images/sahur.jpg" alt="Brainrots">
     </div>
   </div>
+
+  <div class="boton">
+    <button> Hola</button>
+  </div>
 </main>
 
 
