--- a/pages/info.html
+++ b/pages/info.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Brainrot | Info</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" href="../images/mateoo.webp">
     <meta name="description" content="pequeño desarrollador web, crecimiento personal, informacion de los brainrots">
@@ -12,32 +13,43 @@
   <body>
 
  <header>
-     <nav>
-   <a href="../index.html" class="nav-item">
-    <i class="fas fa-home"></i>
-    <span>Home</span>
-   </a>
-   <a href="#" class="nav-item">
-    <i class="fas fa-info-circle"></i>
-    <span>Información</span>
-   </a>
-   <a href="./personajes.html" class="nav-item">
-    <i class="fas fa-brain"></i>
-    <span>Brainrots</span>
-    </a>
-   </nav>
+     <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+  <div class="container">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Información</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./personajes.html">Brainrots</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
  </header> 
 
  <main>
-  <div class="texto-info">
- <h1>¡Acerca de mi proyecto!</h1>
-  <p>Ésta es una pequeña y simple página en donde de vez en cuando estaré actualizando y añadiendo contenido. Es solo un proyecto de práctica ya que soy un desarrollador web pequeño en busca de mejorar y crecer ^^. Si deseas apoyarme y/o ayudarme de alguna manera, te invito a seguirme en tiktok: NinoNk</p>
-  </div>
+ <div class="container text-center my-5">
+  <h1 class="mb-4">¡Acerca de mi proyecto!</h1>
+  <p class="lead">
+    Ésta es una pequeña y simple página en donde de vez en cuando estaré actualizando y añadiendo contenido. 
+    Es solo un proyecto de práctica ya que soy un desarrollador web pequeño en busca de mejorar y crecer ^^. 
+    Si deseas apoyarme y/o ayudarme de alguna manera, te invito a seguirme en tiktok: NinoNk
+  </p>
  </main>
 
 <footer>
       <p>© 2025, Isaias Quiroz. Todos los derechos reservados. </p> 
 </footer>
-
+  
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
  </body>
 </html>
