--- a/pages/info.html
+++ b/pages/info.html
@@ -42,8 +42,17 @@
   <p class="lead">
     Ésta es una pequeña y simple página en donde de vez en cuando estaré actualizando y añadiendo contenido. 
     Es solo un proyecto de práctica ya que soy un desarrollador web pequeño en busca de mejorar y crecer ^^. 
-    Si deseas apoyarme y/o ayudarme de alguna manera, te invito a seguirme en tiktok: NinoNk
+    Si deseas apoyarme y/o ayudarme de alguna manera, te invito a seguirme en tiktok: 
   </p>
+  <ul class="list-unstyled">
+  <li>
+    <a href="https://www.tiktok.com/@elninonk?is_from_webapp=1&sender_device=pc" target="_blank" rel="noopener noreferrer"
+       class="text-decoration-none text-reset">
+  ---NinoNK---
+    </a>
+  </li>
+</ul>
+
  </main>
 
 <footer>
