--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -39,7 +39,7 @@
  <main>
   <div class="contenedor-tarjetas">
    <div class="card">
-    <img src="../images/sahur2.png" alt="Tung tung sahur">
+    <img src="../images/Captura de pantalla 2025-08-09 185203.png" alt="Tung tung sahur">
     <div class="card-content">
     <h3>Tung tung sahur</h3>
     <p>"Tung Tung Tung" y "Sahur". "Tung Tung Tung" imita el sonido de un tambor, y "Sahur" (o Suhur) se refiere a la comida que los musulmanes consumen antes del amanecer durante el Ramadán. Por lo tanto, la frase se traduce como "¡Tocando tambores para el Sahur!".</p>
@@ -85,6 +85,14 @@
     <p>criatura híbrida entre un mono narigudo gigante y un árbol, con raíces entrelazadas y pies grandes. </p>
    </div>
  </div>
+
+ <div class="card">
+    <img src="../images/ballerina-capuchina.webp" alt="ballerina">
+    <div class="card-content">
+    <h3>Ballerina capuchina</h3>
+    <p>Personaje viral originado en TikTok, conocido como "Ballerina Capuchina", que se caracteriza por ser una bailarina de ballet con una taza de capuchino en la cabeza.</p>
+   </div>
+   </div>
 
  </main>
 
