ajustes en el home

--- a/index.html
+++ b/index.html
@@ -37,19 +37,17 @@
 
 </header>
     
-<main>
-  <div class="contenido-info">
-    <div class="texto-info">
+<div class="hero">
+    <div class="hero-content container">
       <h1>¿Para qué es ésta página?</h1>
       <p>
-        En ésta página estaremos hablando de cada uno de los brainrots,
-        trataremos de dar información de todos. ¡Muchas Gracias por visitar!
+        En ésta página estaremos hablando de cada uno de los brainrots, 
+        trataremos de dar información de todos.<br>
+        ¡Muchas Gracias por visitar!
       </p>
     </div>
-    <div class="imagen-derecha">
-      <img src="./images/sahur.jpg" alt="Brainrots">
-    </div>
   </div>
+    
 </main>
 
 
