--- a/index.html
+++ b/index.html
@@ -48,54 +48,21 @@
     </div>
   </div>
 
-  <section class="features py-5">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-md-4">
-            <div class="icon mb-3">
-              <i class="bi bi-person fs-1 text-info"></i>
-            </div>
-            <h5 class="fw-bold">YouTube</h5>
-            <ul class="list-unstyled">
-            <li>
-              <a href="www.youtube.com/@ElNinoNk" target="_blank" rel="noopener noreferrer"
-              class="text-decoration-none text-reset">
-              ElNinoNk
-             </a>
-            </li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <div class="icon mb-3">
-              <i class="bi bi-lightning fs-1 text-info"></i>
-            </div>
-            <h5 class="fw-bold">Instagram</h5>
-            <ul class="list-unstyled">
-            <li>
-              <a href="https://www.instagram.com/elninonk?igsh=Nnlnb3V2Z2E2eXU4" target="_blank" rel="noopener noreferrer"
-              class="text-decoration-none text-reset">
-              @elninonk
-             </a>
-            </li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <div class="icon mb-3">
-              <i class="bi bi-people fs-1 text-info"></i>
-            </div>
-            <h5 class="fw-bold">TikTok</h5>
-            <ul class="list-unstyled">
-            <li>
-              <a href="https://www.tiktok.com/@elninonk?is_from_webapp=1&sender_device=pc" target="_blank" rel="noopener noreferrer"
-              class="text-decoration-none text-reset">
-              @elninonk
-             </a>
-            </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
+<div class="row text-center bg-info py-3">
+  <div class="col">
+    <strong>YouTube</strong><br>
+    <a href="https://youtube.com/ElNinoNk" target="_blank" class="social-link">ElNinoNk</a>
+  </div>
+  <div class="col">
+    <strong>Instagram</strong><br>
+    <a href="https://instagram.com/elninonK" target="_blank" class="social-link">@elninonK</a>
+  </div>
+  <div class="col">
+    <strong>TikTok</strong><br>
+    <a href="https://tiktok.com/@elninonK" target="_blank" class="social-link">@elninonK</a>
+  </div>
+</div>
+
     
 </main>
 
