--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
   </div>
   <div class="col">
     <strong>Instagram</strong><br>
-    <a href="https://instagram.com/elninonK" target="_blank" class="social-link">@elninonK</a>
+    <a href="https://instagram.com/elninonK" target="_blank" class="social-link">@elninonk</a>
   </div>
   <div class="col">
     <strong>TikTok</strong><br>
-    <a href="https://tiktok.com/@elninonK" target="_blank" class="social-link">@elninonK</a>
+    <a href="https://tiktok.com/@elninonK" target="_blank" class="social-link">@elninonk</a>
   </div>
 </div>
 
