--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 <div class="row text-center bg-info py-3">
   <div class="col">
     <strong>YouTube</strong><br>
-    <a href="https://youtube.com/ElNinoNk" target="_blank" class="social-link">ElNinoNk</a>
+    <a href="www.youtube.com/@ElNinoNk" target="_blank" class="social-link">ElNinoNk</a>
   </div>
   <div class="col">
     <strong>Instagram</strong><br>
-    <a href="https://instagram.com/elninonK" target="_blank" class="social-link">@elninonk</a>
+    <a href="https://www.instagram.com/elninonk?utm_source=ig_web_button_share_sheet&igsh=MW10dWpkc3NrNGlnOA==" target="_blank" class="social-link">@elninonk</a>
   </div>
   <div class="col">
     <strong>TikTok</strong><br>
-    <a href="https://tiktok.com/@elninonK" target="_blank" class="social-link">@elninonk</a>
+    <a href="https://www.tiktok.com/@elninonk?is_from_webapp=1&sender_device=pc" target="_blank" class="social-link">@elninonk</a>
   </div>
 </div>
 
