--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="row text-center bg-info py-3">
   <div class="col">
     <strong>YouTube</strong><br>
-    <a href="www.youtube.com/@ElNinoNk" target="_blank" class="social-link">ElNinoNk</a>
+    <a href="https://www.youtube.com/@ElNinoNk" target="_blank" class="social-link">ElNinoNk</a>
   </div>
   <div class="col">
     <strong>Instagram</strong><br>
