--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./images/mateoo.webp">
     <meta name="description" content="Bienvenido a mi sitio web sobre brainrots">
-    <meta name="keywords" content="brainrots, tralalero tralala, lirili larila, tung tung sahur, mateo, tatata sahur">
+    <meta name="keywords" content="brainrots, tralalero tralala, lirili larila, tung tung sahur, mateo, tatata sahur, youtube, instagram, tiktok">
   </head>
   <body>
 
