nuevo texto en info

--- a/pages/info.html
+++ b/pages/info.html
@@ -41,7 +41,7 @@
   <h1 class="mb-4">¡Acerca de mi proyecto!</h1>
   <p class="lead">
     Ésta es una pequeña y simple página en donde de vez en cuando estaré actualizando y añadiendo contenido. 
-    Es solo un proyecto de práctica ya que soy un desarrollador web pequeño en busca de mejorar y crecer ^^. 
+    Es solo un proyecto de práctica y por puro meme ya que soy un desarrollador web pequeño en busca de mejorar y crecer ^^. 
     Si deseas apoyarme y/o ayudarme de alguna manera, te invito a seguirme en tiktok: 
   </p>
   <ul class="list-unstyled">
