--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -94,6 +94,14 @@
    </div>
    </div>
 
+  <div class="card">
+    <img src="../images/images.jpeg" alt="asesino">
+    <div class="card-content">
+    <h3>Cappuccino Assassino</h3>
+    <p>Taza de café con una apariencia de ninja y una actitud agresiva, a menudo asociado con la idea de que los amantes del café se vengarán de aquellos que no lo disfrutan. </p>
+   </div>
+   </div>
+
  </main>
 
  <footer>
