--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -102,6 +102,14 @@
    </div>
    </div>
 
+   <div class="card">
+    <img src="../images/tripi tropi.png" alt="tripi">
+    <div class="card-content">
+    <h3>Tripi tropi Tropa tripa</h3>
+    <p>"Tripi tropi tropa tripa" parece ser una combinación de palabras sin un significado claro en español. "Tripi tropi" es una frase que se usa en algunos contextos informales, posiblemente refiriéndose a algo psicodélico o extraño, mientras que "tropa" significa grupo o multitud. "Tripa" se refiere al intestino o vientre de un animal.</p>
+   </div>
+   </div>
+
  </main>
 
  <footer>
